adding stub of order controller, added get order to spec
