# brewery/brewery-order-service/src/main/java/guru/sfg/brewery/controllers/OrderServiceController.java
@@ -1,0 +1,33 @@
+/*
+ *  Copyright 2019 the original author or authors.
+ *
+ * This program is free software: you can redistribute it and/or modify
+ *     it under the terms of the GNU General Public License as published by
+ *     the Free Software Foundation, either version 3 of the License, or
+ *     (at your option) any later version.
+ *
+ *     This program is distributed in the hope that it will be useful,
+ *     but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *     GNU General Public License for more details.
+ *
+ *     You should have received a copy of the GNU General Public License
+ *     along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
+package guru.sfg.brewery.controllers;
+
+import org.springframework.stereotype.Controller;
+
+@Controller
+public class OrderServiceController {
+
+    //todo - impl
+    ///api/v1/customers/{customerId}/order - list orders, place order
+
+    ///api/v1/customers/{customerId}/order/{orderId}
+
+    ///api/v1/customers/{customerId}/order/{orderId}/pickup
+
+
+}
